2008-03-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Trap exceptions thrown by EU::PkgConfig->find.
	When one occurs, exit with status 0 to indicate to CPAN testers
	that their system isn't supported.

2008-03-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.181.

2008-03-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Remove the no_index specification from EXTRA_META
	because the YAML implementations currently in use don't seem to
	support this syntax yet.

	* Makefile.PL (MY::postamble): Handle the EU::Depends object $glib
	being undefined gracefully.

	* Makefile.PL: Don't warn about this release being unstable
	because it isn't.

	* copyright.pod: Update for 2008.

2008-03-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.180.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Tell the compiler to always look for headers in '.'
	first so that ours are preferred in case of name
	clashes.  (Suggestion by Daniel Macks in RT #32883)

	* MakeHelper.pm: Add a hyphen to the NAME section of POD
	indices.  (Suggested by Quentin Sculo)

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.174.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Rework the BLIB_DONE stuff to not rely on
	Makefile conditionals.  We should now build fine with any `make´
	again.  Also fix some incorrect and add missing dependencies for
	various documentation files.

2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.173.

2008-01-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Make Glib::Type::list_values return the value of each
	enum/flags entry in addition to the name and nickname.  (Patch by
	Kevin Ryde)

	* t/9.t
	* t/filename.t: Hopefully fix test failures on Windows.
